# etl-sigos

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
api/: app.py
aws/checklist/: index.html
aws/troubleshooting/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/aws/: checklist.md  troubleshooting.md
docs/project/: architecture.md  data.md  overview.md  scheduling.md
docs/run/: local.md  tests.md
docs/stylesheets/: extra.css
etl/: main.py
etl/extraction/core/: browser.py  utils.py
etl/extraction/reports/: general_report.py  return_report.py
etl/load/: loader.py
etl/sql/: init_tables.sql
etl/transformation/: transformer.py
extraction/core/: browser.py  utils.py
extraction/reports/: general_report.py  return_report.py
load/: loader.py
project/architecture/: index.html
project/data/: index.html
project/overview/: index.html
project/scheduling/: index.html
run/local/: index.html
run/tests/: index.html
search/: search_index.json
sql/: init_tables.sql
stylesheets/: extra.css
tests/: test_data_quality.py  test_loader.py  test_transformer.py
transformation/: transformer.py
